--- a/backend/vue/src/index.html
+++ b/backend/vue/src/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="./login.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
 <div class="container-fluid">
@@ -29,6 +29,6 @@
  </div>
  </div>
 </div>
-<script src="./login.js"></script>
+<!--<script src="index.js"></script>-->
 </body>
 </html>
