--- a/backend/vue/src/fight.html
+++ b/backend/vue/src/fight.html
@@ -11,7 +11,8 @@
 
 <h3><a href="../../vue/src/index.html">Log in</a></h3>
 <div id="app-11" v-if="authenticate">
-<img src="./chelovek2.png" alt="chelovek" id="chel1">
+<!--<img :src="imagesrc" alt="chelovek" id="chel1">-->
+<img :src="imag" alt="chelovek" id="chel2">
 <img src="./chelovek2.png" alt="chelovek" id="chel2">
     <form class="form">
     <p>Выберите 3 элемента для защиты</p>
